--- a/templates/handlers/SealedEnglish/sealed.html
+++ b/templates/handlers/SealedEnglish/sealed.html
@@ -1,11 +1,10 @@
 <style type="text/css">
     .problem {
-        margin-top: 10px;
-        margin-bottom: 80px;
-    }
-    .problem p{
         font-size: 20px;
-        text-indent: 2em;
+    }
+
+    .highlight {
+        color: red;
     }
 
     .timer {
@@ -16,7 +15,6 @@
         margin-top: 20px;
         display: inline-block;
         float: right;
-        margin-right: 20px;
     }
 
     .page-header h3 {
@@ -25,12 +23,13 @@
 
     .result {
         display: none;
+        font-size: 20px;
     }
 </style>
 
 <div class="page-header col-md-offset-1 col-md-10">
     <h3>
-        第一阶段（第二价格密封拍卖阶段）{% if train %}<a class="back" href="javascript:void(0)"><small>返回</small></a>{% end %}
+        第一阶段（第二价格密封拍卖）{% if train %}<a class="back" href="javascript:void(0)"><small>返回</small></a>{% end %}
     </h3>
     <div class="timers">
         <div class="timer" id="sealedT">
@@ -42,29 +41,59 @@
     </div>
 </div>
 
-<div class=" col-md-offset-1 col-md-10">
+<div class="col-md-offset-1 col-md-10">
 
-    <form class="form-inline problem">
-        <p>一物品的价值q服从6-10的均匀分布，所有竞拍者使用这一物品的成本c均服从0-4的均匀分布。特别的，您使用这个物品的成本为{{ player['cost'] }}。
-            现在开始拍卖该物品，拍卖总时间为3分钟。</p>
-        <div class="form-group col-md-3">
-            <div class="input-group">
-                <input type="number" class="form-control" aria-describedby="addon" name="bid" required oninput="setCustomValidity('');"
-                       value="0.1" min="0" max="10" step="0.1" oninvalid="setCustomValidity('必须输入'+this.min+'到'+this.max+'整数或一位小数');">
-                <span class="input-group-addon" id="addon">点</span>
+    <div class="box effect7 problem">
+        <ul>
+            <li>
+                所有竞拍者都以密封的形式独立出价，出价最高的竞拍者赢得本次拍卖的物品，
+                但获胜者只需支付所有出价中的次高价（第二高价）。</li>
+            <li>
+                本次阶段拍卖物<span class="highlight">价值q服从6-10的均匀分布</span>，
+                所有竞拍者的成本c均服从0-4的均匀分布。也就是说，物品对您的真实价值为q-c。
+                如果你的报价是所有报价中的最高价，而所有报价中的第二高价为b，那么你将支付b并获得物品，你的收益为(q-c)-b；
+                否则，你的收益为0。
+            </li>
+            <li>请在下面的输入框写上您对物品的报价，并进行提交。</li>
+        </ul>
+    </div>
+
+    <div class="well well-sm problem">
+        <ul>
+            <li>
+                就你而言，你的<span class="highlight">成本c={{ player['cost'] }}</span>，也就是说该物品对你的<span class="highlight">真实价值
+                q-c在{{ 6-player['cost'] }}到{{ 10-player['cost'] }}之间</span>。
+            </li>
+        </ul>
+    </div>
+
+    <div  style="margin-bottom: 20px;">
+        <form class="form-inline">
+            <div class="form-group col-md-3 has-success">
+                <div class="input-group">
+                    <input type="number" class="form-control input-lg" aria-describedby="addon" name="bid" required oninput="setCustomValidity('');"
+                           value="0.1" min="0" max="10" step="0.1" oninvalid="setCustomValidity('必须输入'+this.min+'到'+this.max+'整数或一位小数');">
+                    <span class="input-group-addon" id="addon">点</span>
+                </div>
             </div>
-        </div>
-        <div class="col-md-1"><button class="btn btn-primary" type="submit" role="button">提交</button></div>
-    </form>
+            <div class="form-group">
+                <div class="col-sm-1">
+                    <button class="btn btn-primary" type="submit" role="button">提交</button>
+                </div>
+            </div>
+        </form>
+    </div>
 
-    <div class="well well-lg result">
+    <div class="well result">
 
     </div>
 
 </div>
 
 {% if train %}
-<div class="alert alert-warning col-md-offset-1 col-md-10" role="alert">欢迎您进行训练，注意：此时您的对手是一个AGENT。</div>
+<div class="alert alert-warning col-md-offset-1 col-md-10" role="alert">
+    欢迎你进行训练，注意：训练时你的对手是一个智能AGENT。
+</div>
 {% end %}
 
 <script type="text/javascript" language="javascript">
