--- a/templates/account/register.html
+++ b/templates/account/register.html
@@ -27,22 +27,25 @@
         <div class="form-group">
             <label class="col-md-2 control-label">用户名</label>
             <div class="col-md-4">
-                <input type="text" class="form-control" name="username" placeholder="用户名" required
+                <input type="text" class="form-control" name="username" placeholder="用户名" required aria-describedby="userNameHelpBlock"
                        pattern="^[A-Za-z0-9]{6,22}$" oninvalid="setCustomValidity('用户名必须6位以上大小写英文或者数字组成');" oninput="setCustomValidity('');">
+                <span id="userNameHelpBlock" class="help-block">6位以上大(小)写英文或者数字组成。</span>
             </div>
         </div>
         <div class="form-group">
             <label class="col-md-2 control-label">密码</label>
             <div class="col-md-4">
-                <input type="password" class="form-control" name="password" placeholder="密码" required
+                <input type="password" class="form-control" name="password" placeholder="密码" required aria-describedby="passwordHelpBlock"
                        pattern="^[\@A-Za-z0-9\!\#\$\%\^\&\*\.\~]{6,22}$" oninvalid="setCustomValidity('密码必须6-22位字符');" oninput="setCustomValidity('');">
+                <span id="passwordHelpBlock" class="help-block">6位以上22位以下字符组成。</span>
             </div>
         </div>
         <div class="form-group">
             <label class="col-md-2 control-label">重复密码</label>
             <div class="col-md-4">
-                <input type="password" class="form-control" name="re-password" placeholder="密码" required
+                <input type="password" class="form-control" name="re-password" placeholder="密码" required aria-describedby="rePasswordHelpBlock"
                        oninvalid="setCustomValidity('密码必须一致');" oninput="setCustomValidity('');">
+                <span id="rePasswordHelpBlock" class="help-block">必须与上面填的密码一致</span>
             </div>
         </div>
 
