--- a/templates/expmanage/result.html
+++ b/templates/expmanage/result.html
@@ -9,41 +9,43 @@
 {% end %}
 
 {% block row %}
-    <div class="col-md-8 col-md-offset-2">
+    <div class="col-md-6 col-md-offset-3">
         <div class="page-header">
             <h2>结果与个人收益</h2>
         </div>
-        <div class="col-md-10 col-md-offset-1">
 
-            <table class="table table-hover">
-                <thead>
-                <tr>
-                    <th>session</th>
-                    <th>阶段</th>
-                    <th>赢否</th>
-                    <th>获胜价</th>
-                    <th>成交价</th>
-                    <th>收益</th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for r in results %}
-                <tr>
-                    <td>{{ r['session'] }}</td>
-                    <td>{% if r['type'] == '0' %}密封拍卖{% elif r['type'] == '1' %}公开拍卖(价值隐藏){% else %}公开拍卖(价值公开){% end %}</td>
-                    <td>{% if r['win'] == '0' %}否{% else %}赢{% end %}</td>
-                    <td>{{ r['win_price'] }}</td>
-                    <td>{{ r['strike_price'] }}</td>
-                    <td>{{ r['profit'] }}</td>
-                </tr>
-                {% end %}
-                <tr class="success">
-                    <td colspan="5">合计</td>
-                    <td>{{ sum(map(lambda a: a['profit'], results)) }}</td>
-                </tr>
-                </tbody>
-            </table>
+        <table class="table table-hover">
+            <thead>
+            <tr>
+                <th>#</th>
+                <th>阶段</th>
+                <th>赢否</th>
+                <th>获胜价</th>
+                <th>成交价</th>
+                <th>收益（点）</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for i, r in enumerate(results) %}
+            <tr>
+                <td>{{ i+1 }}</td>
+                <td>{% if r['type'] == '0' %}密封拍卖{% elif r['type'] == '1' %}公开拍卖(价值隐藏){% else %}公开拍卖(价值公开){% end %}</td>
+                <td>{% if r['win'] == '0' %}否{% else %}赢{% end %}</td>
+                <td>{{ r['win_price'] }}</td>
+                <td>{{ r['strike_price'] }}</td>
+                <td>{{ r['profit'] }}</td>
+            </tr>
+            {% end %}
+            <tr >
+                <td colspan="5">初始奖励</td>
+                <td>10（元）</td>
+            </tr>
+            <tr class="success">
+                <td colspan="5">合计</td>
+                <td >{{ sum(map(lambda a: a['profit'], results)) }} * 10 + 10 = {{ sum(map(lambda a: a['profit'], results))* 10 + 10 }}（元）</td>
+            </tr>
+            </tbody>
+        </table>
 
-        </div>
     </div>
 {% end %}
