--- a/templates/handlers/SealedEnglish/intro.html
+++ b/templates/handlers/SealedEnglish/intro.html
@@ -3,50 +3,77 @@
         font-size: 20px;
         text-indent: 2em;
     }
-
 </style>
 
 <div class="page-header col-md-offset-1 col-md-10">
     <h2>实验说明<small></small></h2>
 </div>
 
-<div class="alert alert-info col-md-offset-1 col-md-10" role="alert">主持人正在努力分组，请耐心等待。。。</div>
-<div class="well col-md-offset-1 col-md-10 intro">
-    {% raw exp['exp_intro'] %}
+<div class="alert alert-info col-md-offset-1 col-md-10" role="alert">
+    请仔细阅读以下实验流程介绍，并点击报到按钮以确认加入实验。
 </div>
+
+<div class="col-md-offset-1 col-md-10 intro">
+    <div class="box effect7">
+        {% raw exp['exp_intro'] %}
+    </div>
+</div>
+
+
+<form class="col-md-offset-1 col-md-10">
+    <div class="form-group">
+        <div class="">
+            <button class="btn btn-primary" type="submit" role="button">报到</button>
+        </div>
+    </div>
+</form>
 
 <script type="text/javascript" language="javascript">
 
-function enableButton(){
-    $("button.next-stage").removeAttr("disabled");
-    $("button.next-stage").html("下一步");
+function disableForm(){
+    $("form button[type='submit']").attr("disabled", "disabled");
+    $("form button[type='submit']").html("已报到");
 }
-
-$("button.next-stage").on("click", function(){
-    $("button.next-stage").attr("disabled", "disabled");
-    $("button.next-stage").html("准备");
-    send( {cmd:'ready'} );
-});
 
 $(document).ready(function(){
 
+    ws.handler.deny = function(data, evt){
+        alert(data);
+        $("form button[type='submit']").html(data);
+    };
+
     ws.handler.GroupReady = function(data, evt){
+        disableForm();
         alert("是否准备好？");
         send( {cmd:'ready'} );
     };
 
     ws.handler.Ready = function(data, evt){
+        disableForm();
         $(".alert").removeClass("alert-info");
         $(".alert").addClass("alert-warning");
         $(".alert").html("等待其他人做好准备，注意：实验可能随时开始！");
     };
 
+    ws.handler.Inpool = function(data, evt){
+        disableForm();
+        $(".alert").removeClass("alert-info");
+        $(".alert").addClass("alert-warning");
+        $(".alert").html("主持人正在努力分组，请耐心等待。。。");
+    };
 
+    $("form").submit( function(e){
+        event.preventDefault();
+        disableForm();
+        send({'cmd': 'register'});
+    });
 
     {% if substage == 'GroupReady'%}
      ws.handler.GroupReady();
     {% elif substage == 'Ready' %}
      ws.handler.Ready();
+    {% elif substage == 'Inpool' %}
+     ws.handler.Inpool();
     {% end %}
 
 });
