--- a/templates/handlers/SealedEnglish/monitor.html
+++ b/templates/handlers/SealedEnglish/monitor.html
@@ -1,10 +1,10 @@
 <style type="text/css">
-    body {
-        background-color: #c0c0c0;
-    }
-
     .monitor {
         margin-top: 50px;
+    }
+
+    .well {
+        background-color: white;
     }
 
     .page-header {
@@ -12,7 +12,7 @@
     }
 
     .session {
-        min-height: 100px;
+        min-height: 200px;
     }
 
     .group {
@@ -67,68 +67,70 @@
     }
 
 </style>
-<div class="panel panel-primary monitor">
-    <div class="panel-heading">
-        <h3 class="panel-title">监控</h3>
+<div class="monitor">
+    <div class="page-header">
+        <h3>监控</span>
+            <a href="/help" target="_blank">
+                <span class="glyphicon glyphicon-question-sign" aria-hidden="true" style="float:right; color:white;"></span>
+            </a>
+        </h3>
     </div>
 
-    <div class="panel-body">
-        <div role="tabpanel">
 
-            <!-- Nav tabs -->
-            <ul class="nav nav-tabs" role="tablist">
-                {% for i, session in enumerate(pool['sessions']) %}
-                <li role="presentation" class="{% if i == 0 %}active{% end %}">
-                    <a href="#session{{ i }}" aria-controls="session{{ i }}" role="tab" data-toggle="tab">session{{ session['id'] }}</a>
-                </li>
-                {% end %}
-            </ul>
+    <div role="tabpanel">
 
-            <!-- Tab panes -->
-            <div class="tab-content">
-                {% for i, session in enumerate(pool['sessions']) %}
-                <div role="tabpanel" class="tab-pane session {% if i == 0 %}active{% end %}" id="session{{ i }}" session="{{ i }}">
-                    <div class="groups">
-                        {% for i, group in enumerate(session['groups']) %}
-                        <div class="well well-sm group" group="{{ i }}">
-                            {% for pid in group %}
-                            {% if pid.startswith('agent') %}
-                            <div class="player online agent" player="{{ pid }}">
-                                <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-                                <span class="playername">AGENT</span>
-                            </div>
-                            {% elif pid in players %}
-                            <div class="player {% if players[pid].get('heartbeat') and now - players[pid]['heartbeat'] <= 120 %}online{% else %}offline{% end %}" player="{{ pid }}">
-                                <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-                                <span class="playername">{{ players[pid]['username'] }}</span>
-                            </div>
-                            {% end %}
-                            {% end %}
+        <ul class="nav nav-tabs" role="tablist">
+            {% for i, session in enumerate(pool['sessions']) %}
+            <li role="presentation" class="{% if i == 0 %}active{% end %}">
+                <a href="#session{{ i }}" aria-controls="session{{ i }}" role="tab" data-toggle="tab">session{{ session['id'] }}</a>
+            </li>
+            {% end %}
+        </ul>
+
+        <div class="tab-content">
+            {% for i, session in enumerate(pool['sessions']) %}
+            <div role="tabpanel" class="tab-pane session {% if i == 0 %}active{% end %}" id="session{{ i }}" session="{{ i }}">
+                <div class="groups">
+                    {% for i, group in enumerate(session.get('groups', [])) %}
+                    <div class="well well-sm group" group="{{ i }}">
+                        {% for pid in group %}
+                        {% if pid.startswith('agent') %}
+                        <div class="player online agent" player="{{ pid }}">
+                            <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+                            <span class="playername">AGENT</span>
+                        </div>
+                        {% elif pid in players %}
+                        <div class="player {% if players[pid].get('heartbeat') and now - players[pid]['heartbeat'] <= 120 %}online{% else %}offline{% end %}" player="{{ pid }}">
+                            <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+                            <span class="playername">{{ players[pid]['username'] }}</span>
                         </div>
                         {% end %}
+                        {% end %}
                     </div>
-
+                    {% end %}
                 </div>
-                {% end %}
-            </div>
-
-            <div class="well well-sm group empty">
 
             </div>
+            {% end %}
+        </div>
 
-            <div class="player empty online">
-                <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-                <span class="playername"></span>
-            </div>
-
-            <div class="panel panel-info info">
-                <div class="panel-heading">组信息</div>
-                <div class="panel-body">
-                </div>
-            </div>
+        <div class="well well-sm group empty">
 
         </div>
+
+        <div class="player empty online">
+            <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+            <span class="playername"></span>
+        </div>
+
+        <div class="panel panel-info info">
+            <div class="panel-heading">组信息</div>
+            <div class="panel-body">
+            </div>
+        </div>
+
     </div>
+
 </div>
 
 <script type="text/javascript">
