--- a/templates/nav.html
+++ b/templates/nav.html
@@ -14,7 +14,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
           <li><a href="/self">个人主页</a></li>
-          <li><a href="/treatmentlist">treatment列表</a></li>
+          {% if current_user and current_user['user_ishost'] == '1' %}<li><a href="/treatmentlist">treatment列表</a></li>{% end %}
           <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">账户<span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
